caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/refinement_missing_in.caffeine
Blueprints
  "test" success_rate(x):
    Requiring { env: String { x | x { "a" } } }
    signals { value: "x" }
